made privacy policy actually visible (NO LONGER BREAKING THE LAW)

--- a/styles/breakout.css
+++ b/styles/breakout.css
@@ -27,11 +27,14 @@ p {
 
 strong {color: #e3e3e3;}
 
-ul, ol {
+ul {
     font-family: "Inter", sans-serif;
+    margin: 0;
     font-size: 1rem;
     color: #e3e3e3;
 }
+
+li {line-height: 1.65rem;}
 
 code {
     background-color: #2c2c2c;
